# cellrank2_reproducibility

./: .buildinfo  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  genindex.html  index.html  makefile  objects.inv  pyproject.toml  search.html  searchindex.js
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: book.yml  lint.yml
_sources/: index.md
_sources/cytotrace_kernel/benchmark/: README.md  runtime.ipynb
_sources/cytotrace_kernel/embryoid_body/: dpt.ipynb  palantir.ipynb
_sources/labeling_kernel/: inference.ipynb  method_comparison.ipynb
_sources/labeling_kernel/rna_velocity/: em_model.ipynb
_sources/pseudotime_kernel/hematopoiesis/: cr1_vs_cr2.ipynb
_sources/realtime_kernel/mef/: dpt.ipynb
_sources/realtime_kernel/pharyngeal_endoderm/: README.md  cr1_vs_cr2.ipynb  initial_state_subsetted_data.ipynb
cytotrace_kernel/benchmark/: README.html  cytotrace_vs_cr2_scores.html  runtime.html
cytotrace_kernel/embryoid_body/: README.html  cytotrace.html  dpt.html  initial_state.html  palantir.html
labeling_kernel/: cr1_vs_cr2.html  fate_mapping.html  inference.html  kinetic_rate_change.html  method_comparison.html  preprocessing.html  velocity_pseudotime.html
labeling_kernel/dynamo/: fp_ana_chase_and_pulse.html  lap_chase_and_pulse.html  velo_chase_and_pulse.html
labeling_kernel/rna_velocity/: em_model.html
notebooks/: _config.yml  _toc.yml  index.md
notebooks/cytotrace_kernel/benchmark/: cytotrace_vs_cr2_scores.ipynb
notebooks/cytotrace_kernel/embryoid_body/: README.md  dpt.ipynb  initial_state.ipynb  palantir.ipynb
notebooks/cytotrace_kernel/validation/: ML-2021-07-17_hypodermis_and_seam_prep.ipynb  ML-2023-07-17_ciliated_neurons_prep.ipynb  ML-2023-07-17_compare_implementations.ipynb  ML-2023-07-17_muscle_and_mesoderm_prep.ipynb  ML-2023-07-17_tabula_muris_bone_marrow_10x_prep.ipynb  ML-2023-07-17_tabula_muris_bone_marrow_smartseq2_prep.ipynb
notebooks/labeling_kernel/: cr1_vs_cr2.ipynb  fate_mapping.ipynb  inference.ipynb  kinetic_rate_change.ipynb  kinetic_rates_analysis.ipynb  preprocessing.ipynb  preprocessing_full_data.ipynb  velocity_pseudotime.ipynb
notebooks/labeling_kernel/dynamo/: fp_ana_chase_and_pulse.ipynb  fp_ana_pulse.ipynb  lap_chase_and_pulse.ipynb  velo_chase_and_pulse.ipynb  velo_pulse.ipynb
notebooks/labeling_kernel/pseudotime/: dpt.ipynb  palantir.ipynb
notebooks/labeling_kernel/rna_velocity/: em_model.ipynb
notebooks/pseudotime_kernel/hematopoiesis/: cbc_ptk_vs_vk.ipynb  initial_state.ipynb
notebooks/realtime_kernel/mef/: README.md  (+5 more)
pseudotime_kernel/hematopoiesis/: cbc_ptk_vs_vk.html  cr1_vs_cr2.html  dpt.html  initial_state.html  rna_velocity.html
realtime_kernel/mef/: README.html  cr1_vs_cr2.html  dpt.html  initial_state.html  palantir.html  realtime_informed_pseudotime.html  rna_velocity.html  wot.html
realtime_kernel/pharyngeal_endoderm/: README.html  cr1_vs_cr2.html  initial_state_full_data.html  initial_state_subsetted_data.html  realtimekernel_full_data.html  realtimekernel_subsetted_data.html  velocitykernel_full_data.html  velocitykernel_subsetted_data.html  wot_subsetted_data.html
scripts/labeling_kernel/: anndata_generation.py  cr1_vs_cr2.py  fate_mapping.py  inference.py  kinetic_rate_change.py  kinetic_rates_analysis.py  markers.py  method_comparison.py  preprocessing.py  preprocessing_full_data.py  velocity_pseudotime.py
src/cr2/: __init__.py
(+46 files in other folders)
